# udp_server

./: .env.example  Cargo.toml
migrations/2025-04-15-221332_create_messages_table/: up.sql
src/: lib.rs  schema.rs
