[package]
name = "udp_server"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.2.9", features = ["postgres"] }
diesel-async = { version = "0.5.2", features = ["postgres", "bb8"] }
dotenvy = "0.15.7"
flate2 = "1.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio-uring = "0.5.0"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"
